Modifications for drag and drop. Update to model, routes, and views to support per-user storage of expand/collapse state (with tests). Miscellaneous bug fixes.

--- a/website/static/css/projectorganizer.css
+++ b/website/static/css/projectorganizer.css
@@ -181,6 +181,7 @@ h3.category {
 }
 .tt-dropdown-menu {
     width: 422px;
+    height: 2000px;
     padding: 8px 0;
     background-color: #fff;
     border: 1px solid #ccc;
